src/styles/content-page.css
.card {
  /* max-width: 600px; */
  padding: 2rem;
  margin: 1rem;
  border-radius: 0.25rem;
}

h1 {
  font-size: var(--xxl);
  line-height: 36px;
  color: black;
  margin-bottom: 1rem;
  font-weight: 500;
}

p {
  color: black;
  font-size: 14px;
  margin-bottom: 0 !important;
}

h2 {
  margin-bottom: 1rem;
}

b {
  font-weight: 600;
  text-transform: uppercase;
}

.c2 {
  font-weight: 500;
  font-size: var(--lg);
  line-height: var(--xl);
  padding: 2rem 0 0;
  color: black;
  display: list-item;
  margin-left: 0;
  list-style-position: inside;
}

.c4 {
  font-weight: 600;
  font-size: var(--m);
  line-height: var(--lg);
  padding: 0.5rem 0 0;
  display: block;
  font-style: italic;
  color: black;
}

.c5 {
  font-weight: 500;
  font-size: var(--lg);
  line-height: var(--xl);
  padding: 0;
  display: block;
  color: black;
}

li {
  margin-left: 1rem;
  margin-bottom: 0.5rem;
  font-size: 14px;
  color: black;
}

ol li {
  list-style-type: decimal;
}

ul li {
  list-style-type: circle;
}

ul,
ol {
  margin-bottom: 1rem;
}

i {
  font-style: italic;
}

.profile {
  display: flex;
  align-items: center;
  padding: 0.5rem 1rem;
  margin: 0.5rem 0;
  border: 2px solid var(--bc);
  background: var(--app-fg);
  border-radius: 0.25rem;
}

.profile-info {
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-weight: 500;
  width: 100%;
}

.flag {
  font-size: var(--xl);
}

.profile img {
  height: 2.5rem;
  width: 2.5rem;
  border-radius: 50%;
  margin-right: 1rem;
  object-fit: cover;
}

